# Quant

./: .gitignore  README.md  index.html  render.yaml
BA 量化/a-share-quant-system/: .gitignore  HANDOFF.md  README.md  SPEC.md  pyproject.toml
BA 量化/a-share-quant-system/configs/environments/: local.yaml
BA 量化/a-share-quant-system/configs/execution/: cn_a_share_base_2026.yaml
BA 量化/a-share-quant-system/configs/gates/: research_v1.yaml
BA 量化/a-share-quant-system/configs/strategies/: a_share_regime_multifactor_v1.yaml
BA 量化/a-share-quant-system/configs/universes/: cn_a_share_liquid_v1.yaml
BA 量化/a-share-quant-system/docs/: DATA_CONTRACT.md  RUNBOOK.md
BA 量化/a-share-quant-system/src/a_share_quant/: __init__.py  cli.py  config.py
BA 量化/a-share-quant-system/src/a_share_quant/accounting/: __init__.py  ledger.py
BA 量化/a-share-quant-system/src/a_share_quant/alpha/: __init__.py  engine.py
BA 量化/a-share-quant-system/src/a_share_quant/api/: app.py
BA 量化/a-share-quant-system/src/a_share_quant/attribution/: __init__.py  engine.py
BA 量化/a-share-quant-system/src/a_share_quant/backtest/: engine.py
BA 量化/a-share-quant-system/src/a_share_quant/contracts/: __init__.py  models.py
BA 量化/a-share-quant-system/src/a_share_quant/daily/: __init__.py  pipeline.py
BA 量化/a-share-quant-system/src/a_share_quant/data/: __init__.py  dataset.py  rqdata_adapter.py
BA 量化/a-share-quant-system/tests/: conftest.py  test_api_storage.py  test_backtest.py  test_config.py  test_execution.py  test_point_in_time.py  test_portfolio_risk.py  test_research_ml.py  test_universe_features.py
(+110 files in other folders)
