[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-quant-system"
version = "0.1.0"
description = "Independent, portfolio-native A-share quantitative research and shadow-trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=17",
  "pydantic>=2.9",
  "PyYAML>=6.0",
  "rqdatac>=3.5,<4",
  "scipy>=1.10",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
]

[project.scripts]
a-share-quant = "a_share_quant.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"src/a_share_quant/cli.py" = ["B008"]
